--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <li>Multi-threaded</li>
 </ul><h3>Basic usage</h3>
 
-<p><strong>Basic fuzz</strong>  </p>
+<p><strong>Using Dirfuzz is very simple.</strong>
+All you need to do is run it from the command line in the following manner:  </p>
 
 <pre><code>$ ./dirfuzz host
 </code></pre>
